--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -68,6 +68,7 @@ flutter:
     - assets/
     - assets/main_banner/
     - assets/product/
+    - assets/category/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
