feat: [박선호] 페이지 이동 코드 작성 시 간편하게 작성하기 위한 GetX 라이브러리 추가 [DIY-SALES-APP-UI 38]

--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^0.13.4
   flutter_secure_storage: ^6.0.0
   carousel_slider: ^4.0.0
+  get: ^4.6.5
 
 dev_dependencies:
   flutter_test:
