--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   get: ^4.6.5
   bootpay: ^4.4.3
   remedi_kopo: ^0.0.1
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
