feat: [박선호] 구매 후기 등록 시 별점을 매기기 위한 Flutter Rating Bar 라이브러리 추가 [DIY-SALES-APP-UI 71]

--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   bootpay: ^4.4.3
   remedi_kopo: ^0.0.1
   image_picker: ^0.8.6
+  flutter_rating_bar: ^4.0.1
 
 dev_dependencies:
   flutter_test:
