--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   remedi_kopo: ^0.0.1
   image_picker: ^0.8.6
   flutter_rating_bar: ^4.0.1
+  dio: ^4.0.6
 
 dev_dependencies:
   flutter_test:
