--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   image_picker: ^0.8.6
   flutter_rating_bar: ^4.0.1
   dio: ^4.0.6
+  url_launcher: ^6.1.7
 
 dev_dependencies:
   flutter_test:
