--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/main_banner/
     - assets/product/
     - assets/category/
+    - assets/review/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
