--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   dio: ^4.0.6
   url_launcher: ^6.1.7
+  switcher_button: ^0.0.4
 
 dev_dependencies:
   flutter_test:
