--- a/vue/frontend/package.json
+++ b/vue/frontend/package.json
@@ -31,6 +31,7 @@
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
+    "vue-infinite-loading": "^2.4.5",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
   },
