--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   dio: ^4.0.6
   url_launcher: ^6.1.7
   switcher_button: ^0.0.4
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
