feat: [조안나] 사용자가 판매자로 로그인 시 모든 페이지에서 사용되는 Common App Bar UI [DIY-SALES-APP-UI 19]

--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -80,6 +80,7 @@ flutter:
     - assets/product/
     - assets/category/
     - assets/review/
+    - assets/order_status/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
