--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^6.1.7
   switcher_button: ^0.0.4
   flutter_spinkit: ^5.1.0
+  smooth_page_indicator: ^1.0.0+2
 
 dev_dependencies:
   flutter_test:
