feat: [박선호] 판매자가 로그인 후 이동되는 판매자 메인 페이지의 상품 관련 카운트가 간략하게 표기된 Card UI [DIY-SALES-APP-UI 125]

--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -82,6 +82,7 @@ flutter:
     - assets/category/
     - assets/review/
     - assets/order_status/
+    - assets/seller_main/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
