--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   switcher_button: ^0.0.4
   flutter_spinkit: ^5.1.0
   smooth_page_indicator: ^1.0.0+2
+  dropdown_button2: ^1.9.2
 
 dev_dependencies:
   flutter_test:
