--- a/flutter/buy_idea/pubspec.yaml
+++ b/flutter/buy_idea/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   smooth_page_indicator: ^1.0.0+2
   dropdown_button2: ^1.9.2
+  like_button: ^2.0.5
 
 dev_dependencies:
   flutter_test:
