--- a/vue/frontend/package.json
+++ b/vue/frontend/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.2.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "lodash": "^4.17.21",
     "material-design-icons": "^3.0.1",
     "sass": "~1.32.0",
     "sass-loader": "^10.0.0",
