--- a/spring/buy_idea/src/main/resources/application.yaml
+++ b/spring/buy_idea/src/main/resources/application.yaml
@@ -4,9 +4,9 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/buy_idea_db?allowpublickeyretrieval=true&usessl=false&serverTimezone=UTC
+    url: jdbc:mysql://buydia-db/buy_idea_db?allowpublickeyretrieval=true&usessl=false&serverTimezone=UTC
     username: eddi
-    password: eddi@123
+    password: [db비밀번호]
     driver-class-name: com.mysql.cj.jdbc.Driver
     dialect: org.hibernate.dialect.MySQL8Dialect
 
@@ -14,7 +14,7 @@ spring:
     type: redis
 
   redis:
-    host: 127.0.0.1
+    host: buy_dia-redis
     port: 6379
 
   jpa:
