--- a/spring/buy_idea/docker-compose.yml
+++ b/spring/buy_idea/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 services:
   db:
     image: "mysql:8.0"
-    container_name: buydia-db
+    container_name: buy-idea-db
     volumes:
       - dbdata:/var/lib/mysql
       - ./docker/mysql/custom.cnf:/etc/mysql/conf.d/custom.cnf
@@ -40,7 +40,7 @@ services:
     depends_on:
       - redis
     ports:
-      - "8888:7777"
+      - "8888:8888"
     command:
       - bash
       - -c
